# poly_hft_bot

./: .env  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: backtest.toml  config.toml  default.toml  production.toml
migrations/: 001_init.sql
src/: lib.rs  main.rs  types.rs
src/backtest/: config.rs  core.rs  mod.rs  runner.rs
src/client/: auth.rs  clob.rs  gamma.rs  mod.rs  websocket.rs
src/execution/: executor.rs  mod.rs  order.rs
src/monitoring/: dashboard.rs  logger.rs  metrics.rs  mod.rs
src/storage/: mod.rs  models.rs  recorder.rs  state.rs
src/strategy/: mod.rs  params.rs  two_leg.rs
src/utils/: math.rs  mod.rs  time.rs
tests/: backtest_core.rs
