[package]
name = "polymarket-hft-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
alloy = { git = "https://github.com/alloy-rs/alloy", features = ["full", "eip712"] }
alloy-sol-types = "1.5.7"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
anyhow = "1"
thiserror = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
once_cell = "1.19"
futures = "0.3"
serde_with = "3.9"
base64 = "0.21"
rand = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

